--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,10 @@ nb-configuration.xml
 ## OS X
 ##############################
 .DS_Store
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+
